--- a/home.html
+++ b/home.html
@@ -4,14 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Website</title>
+    <title>Andreas O'Rourke Comedy</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
+  <header>
+    <img class = "herobanner" src = "images/heroBanner.png" alt = "Hero Banner" >
+    <nav>
+      <a href = "bookme.html">Book me</a>
+      <a href = "clips.html">Clips</a>
+      <a href = "sets.html">Sets</a>
+    </nav>
+  </header>
   <body>
     <main>
-        <h1>Welcome to My Website test</h1>  
+         
     </main>
-	<script src="index.js"></script>
+	
   </body>
 </html>
