finished the footer. Graphics for the body are next. NEED TO SAVE THIS AS TEMPLATE FOR REMAINING PAGES

--- a/home.html
+++ b/home.html
@@ -81,4 +81,9 @@ Tortor consequat id porta nibh venenatis cras sed felis. Tortor at risus viverra
     </main>
 	
   </body>
+  <footer>
+    <a href = "https://www.instagram.com/andreasorourke/?hl=en"><img src = "icons/instagram logo white.png"></a>
+    <a href = "https://www.tiktok.com/@bignasty86?lang=en"><img src = "icons/tiktok.png"></a>
+    <a href = "https://www.youtube.com/channel/UC71LXc086uxmtFW5tfpnQPQ"><img src = "icons/youtube.png"></a>
+  </footer>
 </html>
