Still working on the body. Experimenting with about me pic

--- a/home.html
+++ b/home.html
@@ -31,14 +31,12 @@
 
     </div>
     <div class = "newshow">
-      <p>01/05/2024 7:30PM<br>
-      Yinzer Funny<br>
-      MJ's Bar & Grille</p>
+      <p>02/03/2024 7:30PM<br>
+      Fake Show<br>
+      Fake location</p>
       <img src = "images/DELETEAFTERTEST.jpg" alt = "a show poster">
 
     </div>
-    
-	
   </body>
   <footer>
     <a href = "https://www.instagram.com/andreasorourke/?hl=en"><img src = "icons/instagram logo white.png"></a>
