--- a/home.html
+++ b/home.html
@@ -37,6 +37,26 @@
       <img src = "images/DELETEAFTERTEST.jpg" alt = "a show poster">
 
     </div>
+    <img class = "featuredclips" src = "images/featuredclips.png" alt = "featured clips">
+    <div class = "bestclips">
+      <p>When Batman let's you off with a warning</p>
+      <video controls src = "videos/Batman2.mp4"></video>
+    </div>
+
+    <div class = "bestclips">
+      <p>When you have a really bad idea</p>
+      <video controls src = "videos/Stupid idea.mp4"></video>
+    </div>
+
+    <div class = "bestclips">
+      <p>That one time I tried crowdwork on a cop</p>
+      <video controls src = "videos/cop.mp4"></video>
+    </div>
+
+    <div class = "bestclips">
+      <p>A true story about my dad</p>
+      <video controls src = "videos/dad.mp4"></video>
+    </div>
   </body>
   <footer>
     <a href = "https://www.instagram.com/andreasorourke/?hl=en"><img src = "icons/instagram logo white.png"></a>
