working on video section. Ran into a bug where video controls aren't working. FUN.

--- a/home.html
+++ b/home.html
@@ -41,21 +41,25 @@
     <div class = "bestclips">
       <p>When Batman let's you off with a warning</p>
       <video controls src = "videos/Batman2.mp4"></video>
+      <div class = "backblock"></div>
     </div>
 
     <div class = "bestclips">
       <p>When you have a really bad idea</p>
       <video controls src = "videos/Stupid idea.mp4"></video>
+      <div class = "backblock"></div>
     </div>
 
     <div class = "bestclips">
       <p>That one time I tried crowdwork on a cop</p>
       <video controls src = "videos/cop.mp4"></video>
+      <div class = "backblock"></div>
     </div>
 
     <div class = "bestclips">
       <p>A true story about my dad</p>
       <video controls src = "videos/dad.mp4"></video>
+      <div class = "backblock"></div>
     </div>
   </body>
   <footer>
