--- a/home.html
+++ b/home.html
@@ -42,24 +42,28 @@
       <p>When Batman let's you off with a warning</p>
       <video controls src = "videos/Batman2.mp4"></video>
       <div class = "backblock"></div>
+      <img class = "orangeclouds" src = "images/orangeclouds.png" alt = "some orange clouds">
     </div>
 
     <div class = "bestclips">
       <p>When you have a really bad idea</p>
       <video controls src = "videos/Stupid idea.mp4"></video>
       <div class = "backblock"></div>
+      <img class = "orangeclouds" src = "images/orangeclouds.png" alt = "some orange clouds">
     </div>
 
     <div class = "bestclips">
       <p>That one time I tried crowdwork on a cop</p>
       <video controls src = "videos/cop.mp4"></video>
       <div class = "backblock"></div>
+      <img class = "orangeclouds" src = "images/orangeclouds.png" alt = "some orange clouds">
     </div>
 
     <div class = "bestclips">
       <p>A true story about my dad</p>
       <video controls src = "videos/dad.mp4"></video>
       <div class = "backblock"></div>
+      <img class = "orangeclouds" src = "images/orangeclouds.png" alt = "some orange clouds">
     </div>
   </body>
   <footer>
