working on video section. got clouds added. Fixing footer

--- a/home.html
+++ b/home.html
@@ -42,28 +42,33 @@
       <p>When Batman let's you off with a warning</p>
       <video controls src = "videos/Batman2.mp4"></video>
       <div class = "backblock"></div>
-      <img class = "orangeclouds" src = "images/orangeclouds.png" alt = "some orange clouds">
+      <img class = "orangeclouds" src = "images/orangeclouds3.png" alt = "some orange clouds">
     </div>
 
     <div class = "bestclips">
       <p>When you have a really bad idea</p>
       <video controls src = "videos/Stupid idea.mp4"></video>
       <div class = "backblock"></div>
-      <img class = "orangeclouds" src = "images/orangeclouds.png" alt = "some orange clouds">
+      <img class = "orangeclouds" src = "images/orangeclouds3.png" alt = "some orange clouds">
     </div>
 
     <div class = "bestclips">
       <p>That one time I tried crowdwork on a cop</p>
       <video controls src = "videos/cop.mp4"></video>
       <div class = "backblock"></div>
-      <img class = "orangeclouds" src = "images/orangeclouds.png" alt = "some orange clouds">
+      <img class = "orangeclouds" src = "images/orangeclouds3.png" alt = "some orange clouds">
     </div>
 
     <div class = "bestclips">
       <p>A true story about my dad</p>
       <video controls src = "videos/dad.mp4"></video>
       <div class = "backblock"></div>
-      <img class = "orangeclouds" src = "images/orangeclouds.png" alt = "some orange clouds">
+      <img class = "orangeclouds" src = "images/orangeclouds3.png" alt = "some orange clouds">
+    </div>
+    <div class = "sampleclip">
+      <img class = "sampleclipheader" src = "images/sampleclipheader.png" alt = "sample clip header">
+      <p>Here's a short clip of my stand up. Longer sets are available upon request!</p>
+      <video class = "samplevid" controls src = "videos/Andreas O'Rourke 5 minutes.mp4"></video>
     </div>
   </body>
   <footer>
