--- a/home.html
+++ b/home.html
@@ -20,16 +20,16 @@
   <body>
     <img class = "aboutme" src = "images/aboutme9.png" alt = "about me image"> 
       <p class = "aboutmeinfo">
-        Hello! My name is Andreas and I am a stand up comedian currently living in the Pittsburgh area.<br>
-        I've been performing stand up comedy for about six years now and have loved every minute of it!<br>
-        During that time, I have performed at almost every type of venue one can possibly imagine!<br>
-        I've performed at comedy clubs, firehalls, nursing homes, memorials, swingers clubs, breweries,<br>
-        a boxing gym, wineries, a tattoo parlor, a library, several movie theaters, street corners, the bed of trucks<br>
-        and a bunch of other places I genuinely cannot remember right now. In summation, I've done a lot of comedy<br>
-        in a lot of different places, and I want to perform for you next! You're most likely here because<br>
-        You saw me perform at a show or you saw some of my content on social media. If you would like to <br>
-        book me for an event or private party, it's as easy as clicking the "book me" link at the top of<br>
-        this page and filling out the information on the form. If you just want to see more of my work,<br>
+        Hello! My name is Andreas and I am a stand up comedian currently living in the Pittsburgh area.
+        I've been performing stand up comedy for about six years now and have loved every minute of it!
+        During that time, I have performed at almost every type of venue one can possibly imagine!
+        I've performed at comedy clubs, firehalls, nursing homes, memorials, swingers clubs, breweries,
+        a boxing gym, wineries, a tattoo parlor, a library, several movie theaters, street corners, the bed of trucks
+        and a bunch of other places I genuinely cannot remember right now. In summation, I've done a lot of comedy
+        in a lot of different places, and I want to perform for you next! You're most likely here because
+        You saw me perform at a show or you saw some of my content on social media. If you would like to 
+        book me for an event or private party, it's as easy as clicking the "book me" link at the top of
+        this page and filling out the information on the form. If you just want to see more of my work,
         feel free to check out some of my stuff below! I update this page regularly!
       </p>
     <img class = "upcomingshows" src = "images/upcomingshows2.png" alt = "upcoming shows">
