Still working on book me page. Some minor style adjustments needed

--- a/bookme.html
+++ b/bookme.html
@@ -19,12 +19,15 @@
   </header>  
   <body>
     <img class = "bookmeheader" src = "images/bookmetoday.png" alt = "book me header">
+    <div class = "forminstructionswrapper">
+      <img class = "forminstructionspic" src = "images/forminstructionspic.jpg" alt = "instructions pic">
     <p class = "forminstructions">You can use the form below to book me for your event or private party.
       in the "show details" section be sure to include how long of a performance you would like from me,
       when you would like the show to begin, and any content restrictions you may have for your event.
       You will recieve a response no later than 48 hours. You can also use this form to send me any miscellaneous
       questions you may have for me or if you're interested in any sort of collaboration. Thank you!
     </p>
+    </div>
     <div class = "requestform">
         <img class = "formpic" src = "images/formpic.jpg" alt = "a background pic for the book me form">
         <form method ="post" action = "https://formspree.io/f/xaygwnle">
