hit a wall with the div boxes

--- a/clips.html
+++ b/clips.html
@@ -18,7 +18,7 @@
   </nav>
   </header>  
   <body>
-	<div class = "yellowsquare" width = "100px">
+	<div class = "yellowsquare">
         <div class = "orangesquare">
             <div class = "bluesqaure">
 
