hit a wall with the div boxes

--- a/clips.html
+++ b/clips.html
@@ -20,7 +20,21 @@
   <body>
 	<div class = "yellowsquare">
         <div class = "orangesquare">
-            <div class = "bluesqaure">
+            <div class = "bluesquare">
+              <p class ="testtitle">test video title</p>
+              <video controls class = "testclip" src = "videos/cop.mp4"></video>
+
+              <p class = "testtitle">test video title</p>
+              <video controls class = "testclip" src = "videos/cop.mp4"></video>
+
+              <p class = "testtitle">test video title</p>
+              <video controls class = "testclip" src = "videos/cop.mp4"></video>
+
+              <p class = "testtitle">test video title</p>
+              <video controls class = "testclip" src = "videos/cop.mp4"></video>
+
+              <p class = "testtitle">test video title</p>
+              <video controls class = "testclip" src = "videos/cop.mp4"></video>
 
             </div>
         </div>
