added art to clips page. Need to design something else

--- a/clips.html
+++ b/clips.html
@@ -19,6 +19,7 @@
   </header>  
   <body>
 	<div class = "yellowsquare">
+    <img class = "clipsdrawing" src = "images/drawingforclips.png" alt = "drawing for clips page">
         <div class = "orangesquare">
             <div class = "bluesquare">
               <p class ="testtitle">test video title</p>
