Just need to add clips to the clips page then I can do the same for the videos page

--- a/clips.html
+++ b/clips.html
@@ -20,6 +20,7 @@
   <body>
 	<div class = "yellowsquare">
     <img class = "clipsdrawing" src = "images/drawingforclips.png" alt = "drawing for clips page">
+    <img class = "daddrawing" src = "images/dadv1.png" alt = "dad logo ">
         <div class = "orangesquare">
             <div class = "bluesquare">
               <p class ="testtitle">test video title</p>
